# thames_tidal_helper

./: .gitignore  LICENCE  README.md  coverage.txt  example_input.txt  example_output.txt  input.txt  pyproject.toml
.github/workflows/: python-tests.yml
test/: conftest.py  test_api.py  test_cache.py  test_client.py  test_commands.py  test_data.py  test_data_manager.py  test_datetime.py  test_interpolation.py  test_query.py
test/example_data/: 2014_Q1.json  2024_Q1.json  2024_Q2.json  2024_Q3.json
thames_tidal_helper/: Client.py  __main__.py  api_adapter.py  client.py  config.py  data_manager.py  interpolation.py  schema.py
