[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thames_tidal_data"
version = "0.1.0"
description = "A Python module for querying Thames tidal data."
authors = [
    { name="Stewart Agar", email="s.agar16@imperial.ac.uk" }
]
dependencies = [
    "requests>=2.32.3",
    "pytest>=8.3.3"
]