[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thames_tidal_helper"
version = "0.1.0"
description = "A Python module for querying Thames tidal data."
readme = "README.md"
license = { file = "LICENCE" }
authors = [
    { name="Stewart Agar", email="s.agar16@imperial.ac.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests>=2.32.3",
    "pytest>=8.3.3"
]

[tool.setuptools]
package-dir = { "" = "thames_tidal_helper" }
